webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -63,7 +63,7 @@ subscribe method. This is then used by the subscriber to verify the messages sen
 (to prevent spoofing attacks). Its known as a shared secret because its held by both the publisher (Preservica) and 
 the subscriber (web hook server).
 
-Using the PyPreservica SDK to create a new subscription to Ingested events, you pass the address of a web service which
+Using the PyPreservica SDK to create a new subscription for Ingested events, you pass the address of a web service which
 can receive HTTP POST requests. This could be a web server or some API gateway service. If you use a web server it 
 must provide a publicly accessible endpoint. If you are running a local server for testing purposes it will need to use some 
 kind of ingress service to make it publicly accessible.
@@ -89,10 +89,12 @@ where http://my-preservica-webhook.com:8080 is the web hook endpoint URL.
 
 During the subscription process, Preservica will send a challenge response message to the specified 
 endpoint URL to verify that it exists and its publicly accessible.  
-Preservica will make a POST request to the URL with a challengeCode query parameter. 
+Preservica sends a POST request to the URL with a challengeCode query parameter. 
 The server must respond with the expected challenge response or the subscription will fail. 
 
-The challenge response must take the form of a simple json document which is sent back to Preservica.
+The response sent back to Preservica takes the form of a simple json document which includes the original challenge
+code and a hexHmac256Response which is a hexadecimal encoded hmac256 of the challenge Code using the shared secret as the hmac key. 
+
 
 ```json
 
@@ -103,24 +105,25 @@ The challenge response must take the form of a simple json document which is sen
 
 ```
 
-where hexHmac256Response is a hexadecimal encoded hmac256 of the challengeCode using the secret as the hmac key. 
 Therefore, the web hook process will need a copy of the secret key to verify requests.
+
 
 
 ### Receiving Events
 
-To receive web hook notifications pyPreservica has provided a reference web server implementation which provides 
+To receive web hook notifications pyPreservica provides a reference web server implementation which includes 
 support for the negotiation of the challenge request handshake during the subscription request and 
-verification of each webhook event request.
+verification of each subsequent webhook event.
 
-To implement the web server, extend the base class WebHookHandler and implement a 
+To implement the web server, extend the base class WebHookHandler from the SDK and implement a 
 single method do_WORK() this method is called every time Preservica calls the web hook. 
-This method is therefore where any processing takes place. 
+This method is therefore where any processing takes place. This method is passed a python dict object containing
+information about the event such as Asset references etc.
 
 ```python
 
 class MyWebhook(WebHookHandler):
-  def do_WORK(json):
+  def do_WORK(event):
     # Do something useful
    
 
@@ -130,7 +133,7 @@ The handler can then be used to create a web server, the web server should be ru
 pyPreservica credential.properties file containing the shared secret which was used earlier to create 
 the web hook subscription.
 
-The WebHookHandler extends the BaseHTTPRequestHandler base class and will provide the handshake and 
+The WebHookHandler extends the standard Python BaseHTTPRequestHandler base class and will provide the handshake and 
 message verification automatically. Only verified messages are actioned.  This class is part of the pyPreservica SDK.
 
 ```python
@@ -199,8 +202,8 @@ PORT = 8080
 
 
 class MyWebHook(WebHookHandler):
-    def do_WORK(self, json_payload):
-        for reference in list(json_payload['events']):
+    def do_WORK(self, event):
+        for reference in list(event['events']):
             ref = reference['entityRef']
             asset = self.server.client.asset(ref)
             self.server.client.thumbnail(asset, f"{ref}.jpg")
@@ -245,7 +248,7 @@ polling API.
 * Transcribe video or audio after ingesting AV material
 * Send an automatically created access version of an Asset to a discovery platform 
 
-#### Custom Integrations
+#### Microsoft Teams Integration
 
 This use case shows how we can chain webhooks together to allow 3rd party systems to communicate with each other.
 We are going to use Microsoft Teams as the 3rd party system as Teams provides incoming webhook functionality.
@@ -302,8 +305,8 @@ class MyWebHook(WebHookHandler):
         myTeamsMessage.send()
     
     
-    def do_WORK(self, json_payload):
-        for reference in list(json_payload['events']):
+    def do_WORK(self, event):
+        for reference in list(event['events']):
             ref = reference['entityRef']
             asset = self.server.client.asset(ref)
             self.teams_message(asset)
@@ -327,7 +330,7 @@ if __name__ == '__main__':
     httpd.serve_forever()
 
 ```
-Every ingest now creates the following message in teams
+Every ingest now creates a new Teams message containing information about the Asset, for example
 
  ![Teams](/public/images/teams1.PNG)
 
@@ -337,7 +340,7 @@ In the examples above, a web server is used to receive the web hook notification
 inefficient as the web server needs to be running on a server even when no notifications are being sent.
 
 In turns out that webhooks are especially well suited to modern serverless architecture 
-such as Amazon Lambda and Azure Functions. Running a dedicated web server is inefficient and unnecessary.
+such as Amazon Lambda and Azure Functions. Running a dedicated web server can be inefficient and unnecessary.
 
 AWS Lambda and Azure Functions are code fragments which are triggered to run from external events 
 such as web hooks. This is a simple and cost-effective approach to processing events.
@@ -346,6 +349,7 @@ such as web hooks. This is a simple and cost-effective approach to processing ev
 * Web server infrastructure is provided for you through the API Gateway
 * Only pay for the milliseconds used
 * Highly Scalable
+* Secure
 
 AWS has a dedicated set of infrastructure based on the [API Gateway](https://aws.amazon.com/api-gateway/) service 
 which allows public API endpoints to be created. These API endpoints act as the "front door" for the 
@@ -356,6 +360,6 @@ POST requests.
 When the API gateway receives a webhook notification it will pass the message payload from Preservica to the 
 AWS Lambda function which will carry out the appropriate action.
 
-Lambda support multiple languages such as Java, Go, PowerShell, Node.js, C#, Python, and Ruby code, so you 
+AWS Lambda supports multiple languages such as Java, Go, PowerShell, Node.js, C#, Python, and Ruby code, so you 
 can build your applications in the language of your choice.
 
