webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -357,6 +357,10 @@ webhook applications managing traffic management, CORS support, authorization an
 throttling, and monitoring etc. For the Preservica webhook use case the API gateway only needs to accept HTTP
 POST requests.
 
+
+ ![APIGateway](/public/images/aws-gateway.png)
+
+
 When the API gateway receives a webhook notification it will pass the message payload from Preservica to the 
 AWS Lambda function which will carry out the appropriate action.
 
@@ -374,7 +378,6 @@ A basic AWS Lambda function for Preservica web hooks in Python would look someth
      
     def lambda_handler(event, context):
         secret_key = os.environ.get('PRES_SECRET_KEY')
-        print(event)
         if 'queryStringParameters' in event:
             if event['queryStringParameters'] is not None:
                 if 'challengeCode' in event['queryStringParameters']:
@@ -414,8 +417,8 @@ Where we are fetching the shared key from the environment variables.
 The event information sent to the lambda function comprises a json document with a body field which looks like
 
 ```json
-
-    {   "subscriptionId":"9495ddbf7d4a0b9f030a3411c87f967d",
+    {   
+      "subscriptionId":"9495ddbf7d4a0b9f030a3411c87f967d",
         "timestamp":"2023-10-11T10:52:42.469",
         "tenant":"BRAMA",
         "version":"6.10",
@@ -428,5 +431,5 @@ The event information sent to the lambda function comprises a json document with
     }
 ```
 
-From this json document the entity type and entity reference of the ingest Asset can be extracted.
+From this json document the entity type and entity reference of the ingested Asset can be extracted.
 
